# sandbox-x86-64

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  test_cc_elf64_cpuemu.sh  test_cc_macho64_cpuemu.sh  test_cc_nasm_cpuemu.sh  test_cc_to_cpu.sh  test_cc_to_cpu_elf64.sh  test_cc_to_cpu_macho64.sh
cc/: .gitignore  9cc.h  Makefile  codegen.c  main.c  my_string.c  parse.c  run-tests.sh  tests.sh  tokenize.c  type.c
cc/tools/: astdump.c  tokendump.c
cpu/: .gitignore  Makefile  elf_loader.c  elf_loader.h  emulator.h  emulator_function.c  emulator_function.h  instruction.c  instruction.h  io.c  io.h  macho.c  macho.h  macho_loader.c  macho_loader.h  main.c  modrm.c  modrm.h  run-tests.sh  tests.sh  virtual_memory.c  virtual_memory.h
cpu/test/: hello.asm  test_virtual_memory.c
cpu_validator/: .gitignore  Makefile  main.c  ndb.c  tests.sh
